--- a/client/index.html
+++ b/client/index.html
@@ -2,23 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>GreenSteps – Sustainable Living Classroom</title>
+
+    <!-- Remove favicon -->
+    <link rel="icon" href="data:,">
+
+    <!-- Open Graph -->
     <meta property="og:title" content="GreenSteps – Sustainable Living Classroom" />
     <meta property="og:description" content="Interactive lessons, eco-projects, and resources that help students build a sustainable lifestyle." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/attached_assets/generated_images/hero-illustration.png" /> 
+    <meta property="og:image" content="/attached_assets/generated_images/hero-illustration.png" />
+
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="GreenSteps – Sustainable Living Classroom" />
     <meta name="twitter:description" content="Join the movement for a greener future with interactive lessons and real-world projects." />
 
-    <link rel="icon" type="image/png" href="/favicon.png" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- Importing Outfit (Headings) and DM Sans (Body) -->
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@100..1000&family=Outfit:wght@100..900&display=swap" rel="stylesheet" />
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
